tests/ui/max-align.msrv.stderr
error[E0589]: invalid `repr(align)` attribute: larger than 2^29
  --> /usr/local/google/home/joshlf/workspace/zerocopy/ui-test/tests/ui/max-align.rs:96:11
   |
96 | #[repr(C, align(1073741824))]
   |           ^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0589`.
